<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_background"
              android:orientation="vertical">

    <TextView
            android:id="@+id/tv_prompt"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stripe_repeat"
            android:gravity="center"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text"
            android:textColorLink="@color/text_link"
            android:text="@string/prompt"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:keepScreenOn="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp">

            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/label_phone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"/>

            <EditText
                    android:id="@+id/et_phone"
                    android:hint="必填，请准确填写"
                    style="@style/SignInEditText"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusDown="@id/et_phone"/>

            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/label_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"/>

            <EditText
                    android:id="@+id/et_name"
                    style="@style/SignInEditText"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/actv_address"
                    android:hint="必填"
                    android:inputType="textPersonName"/>

            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/label_address"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"/>

            <AutoCompleteTextView
                    android:id="@+id/actv_address"
                    style="@style/SignInEditText"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/et_address_plus"
                    android:inputType="textPostalAddress"
                    android:hint="必填,打开gps可自动定位"
                    android:text=""
                    />


            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/label_address_plus"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"/>

            <EditText
                    android:id="@+id/et_address_plus"
                    style="@style/SignInEditText"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_address_plus"
                    android:nextFocusDown="@+id/et_desc"/>

            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/label_desc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"/>

            <EditText
                    android:id="@+id/et_desc"
                    style="@style/SignInEditText"
                    android:imeOptions="actionDone"
                    android:password="false"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:gravity="top|left"
                    android:hint="请写清故障现象，例如：不能正常开机(电源灯也不亮)。"
                    />

            <Button
                    android:id="@+id/btn_submit"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background_states"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

        </LinearLayout>
    </ScrollView>

</LinearLayout>